# xf86-video-amdgpu

./: configure.ac
src/: Makefile.am  amdgpu_dri2.c  amdgpu_dri3.c  amdgpu_glamor.h  meson.build
